# cashcraft-cli

./: .gitignore  Cargo.toml  README.md
docs/: PRD.md
src/: app.rs  error.rs  lib.rs  main.rs
src/config/: keybindings.rs  mod.rs  settings.rs
src/domain/: balance.rs  budget.rs  expense.rs  income.rs  mod.rs  transaction.rs
src/domain/playground/: evaluator.rs  grammar.pest  mod.rs  parser.rs  session.rs
src/repository/: balance_repo.rs  budget_repo.rs  database.rs  expense_repo.rs  income_repo.rs  mod.rs  transaction_repo.rs
src/services/: balance_service.rs  budget_service.rs  category_service.rs  chart_service.rs  expense_service.rs  export_service.rs  income_service.rs  mod.rs  transaction_service.rs
src/ui/: animation.rs  history.rs  layout.rs  mod.rs  theme.rs  tui.rs
src/ui/views/: budget.rs  charts.rs  dashboard.rs  expenses.rs  income.rs  mod.rs  playground.rs  settings.rs  transactions.rs
src/ui/widgets/: autocomplete.rs  chart.rs  input.rs  mod.rs  progress.rs  table.rs
src/utils/: currency.rs  date.rs  math.rs  mod.rs
