[package]
name = "cashcraft"
version = "1.0.0"
edition = "2021"
authors = ["CashCraft"]
description = "A Vim-powered TUI personal finance manager"
license = "MIT"
keywords = ["finance", "tui", "cli", "vim", "budget"]
categories = ["command-line-utilities", "finance"]

[dependencies]
# TUI Framework
ratatui = { version = "0.28", features = ["serde"] }
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Numbers
rust_decimal = { version = "1.36", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# CLI Parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Directories
directories = "5.0"

# Expression Parsing (for Playground)
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
pretty_assertions = "1.4"
rust_decimal_macros = "1.40.0"
tempfile = "3.12"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
